--- a/template_pagina_padrao.html
+++ b/template_pagina_padrao.html
@@ -652,7 +652,7 @@
       >
         <tr style="background-color: #ccccbe; height: 50px">
           <th style="text-align: center">
-            Comp.<br />
+            Comp.
             Apuração
           </th>
           <th style="text-align: center">
