bug das virgulas ajustado

--- a/template_pagina_padrao.html
+++ b/template_pagina_padrao.html
@@ -339,7 +339,7 @@
         <td style="text-align: right">                        ${dado["Total"]}
 </td>
       </tr>`;
-  })}
+  }).join("")}
     </table>
   </main>
   <hr style="page-break-after: always" />
