--- a/template_pagina_padrao.html
+++ b/template_pagina_padrao.html
@@ -130,7 +130,7 @@
       Tomador = item.Tomador;
     });
 
-    d3.dsv(";")("/planilha1.csv", (items) => {
+    d3.dsv(";")("./planilha1.csv", (items) => {
       console.log;
       console.log(items[0], items[1]);
       const tamanho_maximo = 24;
