att aling center 101 categoria

--- a/template_pagina_padrao.html
+++ b/template_pagina_padrao.html
@@ -17,7 +17,7 @@
     }
     .tamanhoPage{
       width: 297mm;
-      height:208mm;
+      height:200mm;
       position: relative;
     }
     body {
@@ -118,7 +118,7 @@
       flex: 1;
       
     }
-    footer{ 
+    footer{
       height: auto;
       align-items: end;
       margin-top: auto;
@@ -285,7 +285,7 @@
         background-color: #e4e6d8;
       "
     >
-      <tr style="background-color: #ccccbe; height: 35px">
+      <tr style="background-color: #ccccbe; height: 50px">
         <th style="text-align: center">
           Comp.<br />
           Apuração
@@ -506,7 +506,7 @@
           background-color: #e4e6d8;
         "
       >
-        <tr style="background-color: #ccccbe; height: 35px">
+        <tr style="background-color: #ccccbe; height: 50px">
           <th style="text-align: center">Comp. Apuração</th>
           <th style="text-align: center">Categoria</th>
           <th style="max-width: 600px">Qtd. Trabalhadores</th>
@@ -534,7 +534,7 @@
 
         <tr>
           <td style="text-align: center">09/2023</td>
-          <td>101</td>
+          <td style="text-align: center;">101</td>
           <td style="border-right: 3px solid white">114</td>
           <td style="border-right: 3px solid white">217.348,55</td>
           <td>17.189,25</td>
