--- a/template_pagina_padrao.html
+++ b/template_pagina_padrao.html
@@ -703,4 +703,224 @@ público, sem vínculo de emprego/estatutário
     </script>
 
   </body>
+  <header>
+    <div class="titulo">
+      <img
+        class="logo"
+        src="https://www.serpro.gov.br/menu/noticias/noticias-2022/fgts-digital/fgts-digital.png/@@images/44b54d11-be40-4df7-870f-2cdb5ff19982.png"
+        width="100"
+      />
+
+      <span style="transform: translate(-25%)"
+        ><b>Detalhe da Guia a Ser Emitida</b></span
+      >
+
+      <span></span>
+    </div>
+
+    <div class="row">
+      <div class="col">
+        <label class="subtitulo" for="Empregador">Empregador: </label>
+        <label class="subtitulo" for="Empregador">Vencimento da Guia: </label>
+      </div>
+
+      <div class="col-2">
+        <span class="empregadorNum" style="font-size: 0.75rem"
+          >33.780.199</span
+        >
+        <span style="font-size: 0.75rem"> 23/10/2023</span>
+      </div>
+
+      <div class="col">
+        <label class="subtitulo" for="Empregador">Nome Empregador: </label>
+      </div>
+
+      <div class="col">
+        <span> KRATUS TECNOLOGIA COMERCIO E SERVICOS LTDA </span>
+      </div>
+
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+
+      <div class="col">
+        <label class="subtitulo" for="Empregador"> Qtd. Trabalhadores:</label>
+      </div>
+
+      <div class="col">
+        <span> 114</span>
+      </div>
+
+      <div class="col">
+        <label class="subtitulo" for="Empregador"> Origem:</label>
+      </div>
+
+      <div class="col">
+        <span>Gestão de Guias</span>
+      </div>
+    </div>
+
+    <div class="tituloTabela">
+      <span><b>Relação de Trabalhadores</b></span>
+    </div>
+    <hr />
+  </header>
+  <main>
+    <div class="topoTabela">
+      <div class="infoTabela">
+        <label for="">Estabelecimento:</label>
+        <span>33.780.199/0001-77</span>
+      </div>
+      <div class="infoTabela">
+        <label for="">Tomador:</label>
+        <span>32.855.236/0001-04</span>
+      </div>
+    </div>
+
+    <table
+      style="
+        width: 100%;
+        border-collapse: collapse;
+        text-align: left;
+        background-color: #e4e6d8;
+      "
+    >
+      <tr style="background-color: #ccccbe; height: 35px">
+        <th style="text-align: center">
+          Comp.<br />
+          Apuração
+        </th>
+        <th style="text-align: center">
+          Comp.<br />
+          Referência
+        </th>
+        <th style="max-width: 600px">Nome Trabalhador</th>
+        <th style="width: 125px">Matrícula</th>
+        <th style="max-width: 150px">CPF</th>
+        <th style="text-align: right; padding-right: 20px">Categoria</th>
+        <th>Vencimento</th>
+        <th>Tipo Depósito</th>
+        <th style="text-align: right; max-width: 50px">
+          Base Remuneração<br />
+          Total
+        </th>
+        <th style="text-align: right">
+          Valor FGTS<br />
+          na Guia
+        </th>
+        <th style="width: 80px; text-align: center">Juros</th>
+        <th style="text-align: right; width: 10px; padding-right: 20px">
+          Atualiz.<br />
+          Monetária
+        </th>
+        <th style="text-align: center">Multa</th>
+        <th style="text-align: right">Total</th>
+      </tr>
+
+      <tr>
+        <td style="text-align: center">09/2023</td>
+        <td></td>
+        <td style="border-right: 3px solid white">
+          ANA CLAUDIA CANDIDO DA SILVA
+        </td>
+        <td style="border-right: 3px solid white">4</td>
+        <td>087.556.237-00</td>
+        <td style="text-align: right; padding-right: 20px">101</td>
+        <td style="padding-left: 5px">06/10/2023</td>
+        <td>Mensal</td>
+        <td style="text-align: right; border-left: 3px solid white">
+          1.516,00
+        </td>
+        <td style="text-align: right">121,28</td>
+        <td style="text-align: center">0,60</td>
+        <td style="text-align: right; padding-right: 20px">0,06</td>
+        <td style="text-align: center">6,06</td>
+        <td style="text-align: right">128,00</td>
+      </tr>
+      <tr>
+        <td style="text-align: center">09/2023</td>
+        <td></td>
+        <td style="border-right: 3px solid white">
+          ANA CLAUDIA CANDIDO DA SILVA
+        </td>
+        <td style="border-right: 3px solid white">4</td>
+        <td>087.556.237-00</td>
+        <td style="text-align: right; padding-right: 20px">101</td>
+        <td style="padding-left: 5px">06/10/2023</td>
+        <td>Mensal</td>
+        <td style="text-align: right; border-left: 3px solid white">
+          1.516,00
+        </td>
+        <td style="text-align: right">121,28</td>
+        <td style="text-align: center">0,60</td>
+        <td style="text-align: right; padding-right: 20px">0,06</td>
+        <td style="text-align: center">6,06</td>
+        <td style="text-align: right">128,00</td>
+      </tr>
+    </table>
+
+    <hr />
+    <div class="infoTable">
+      <span style="padding-right: 5px">Total do Tomador</span>
+      <span style="padding-right: 50px">32.855.236/0001-04</span>
+      <span style="padding-right: 34px">10.079,67</span>
+      <span style="padding-right: 33px">806,37</span>
+      <span style="padding-right: 53px"> 3,99 </span>
+      <span style="padding-right: 22px">0,39</span>
+      <span style="padding-right: 18px">40,30</span>
+      <span>851,05</span>
+    </div>
+    <div class="infoTable">
+      <span style="padding-right: 5px">Total do Estabelecimento</span>
+      <span style="padding-right: 50px">32.855.236/0001-04</span>
+      <span style="padding-right: 34px">10.079,67</span>
+      <span style="padding-right: 33px">806,37</span>
+      <span style="padding-right: 53px"> 3,99 </span>
+      <span style="padding-right: 22px">0,39</span>
+      <span style="padding-right: 18px">40,30</span>
+      <span>851,05</span>
+    </div>
+    <div class="infoTable">
+      <span style="padding-right: 50px">Total da Guia</span>
+      <span style="padding-right: 34px">10.079,67</span>
+      <span style="padding-right: 33px">806,37</span>
+      <span style="padding-right: 53px"> 3,99 </span>
+      <span style="padding-right: 22px">0,39</span>
+      <span style="padding-right: 18px">40,30</span>
+      <span>851,05</span>
+    </div>
+  </main>
+
+  <footer></footer>
+  <div class="quebraPag"></div>
 </html>
