correcao mini erros

--- a/template_pagina_padrao.html
+++ b/template_pagina_padrao.html
@@ -532,7 +532,7 @@ background-color: #e4e6d8;
 </th>
 <th>Juros</th>
 <th style="text-align: right; max-width: 50px">
-  s Atualiz. Monetária
+   Atualiz. Monetária
 </th>
 <th style="text-align: right">Multa</th>
 
@@ -550,7 +550,7 @@ background-color: #e4e6d8;
 <td>88,07</td>
 <td style="text-align: right; border-left: 3px solid white">8,51</td>
 <td style="text-align: right">889,13</td>
-<td style="text-align: center">18.771,32</td>
+<td style="text-align: right">18.771,32</td>
 </tr>
 
 <tr style="background-color: white">
@@ -568,7 +568,7 @@ background-color: #e4e6d8;
   <b>8,51</b>
 </td>
 <td style="text-align: right"><b>889,13</b></td>
-<td style="text-align: center"><b>18.771,32</b></td>
+<td style="text-align: right"><b>18.771,32</b></td>
 </tr>
 </table>
 
@@ -995,7 +995,7 @@ público, sem vínculo de emprego/estatutário
           </th>
           <th>Juros</th>
           <th style="text-align: right; max-width: 50px">
-            s Atualiz. Monetária
+            Atualiz. Monetária
           </th>
           <th style="text-align: right">Multa</th>
 
@@ -1013,7 +1013,7 @@ público, sem vínculo de emprego/estatutário
           <td>88,07</td>
           <td style="text-align: right; border-left: 3px solid white">8,51</td>
           <td style="text-align: right">889,13</td>
-          <td style="text-align: center">18.771,32</td>
+          <td style="text-align: right">18.771,32</td>
         </tr>
 
         <tr style="background-color: white">
@@ -1031,7 +1031,7 @@ público, sem vínculo de emprego/estatutário
             <b>8,51</b>
           </td>
           <td style="text-align: right"><b>889,13</b></td>
-          <td style="text-align: center"><b>18.771,32</b></td>
+          <td style="text-align: right"><b>18.771,32</b></td>
         </tr>
       </table>
     </main>
@@ -1171,7 +1171,7 @@ público, sem vínculo de emprego/estatutário
           </th>
           <th>Juros</th>
           <th style="text-align: right; max-width: 50px">
-            s Atualiz. Monetária
+            Atualiz. Monetária
           </th>
           <th style="text-align: right">Multa</th>
 
@@ -1189,7 +1189,7 @@ público, sem vínculo de emprego/estatutário
           <td>88,07</td>
           <td style="text-align: right; border-left: 3px solid white">8,51</td>
           <td style="text-align: right">889,13</td>
-          <td style="text-align: center">18.771,32</td>
+          <td style="text-align: right">18.771,32</td>
         </tr>
 
         <tr style="background-color: white">
@@ -1207,7 +1207,7 @@ público, sem vínculo de emprego/estatutário
             <b>8,51</b>
           </td>
           <td style="text-align: right"><b>889,13</b></td>
-          <td style="text-align: center"><b>18.771,32</b></td>
+          <td style="text-align: right"><b>18.771,32</b></td>
         </tr>
       </table>
     </main>
