--- a/template_pagina_padrao.html
+++ b/template_pagina_padrao.html
@@ -1221,7 +1221,7 @@ público, sem vínculo de emprego/estatutário
         <img
           class="logo"
           src="https://www.serpro.gov.br/menu/noticias/noticias-2022/fgts-digital/fgts-digital.png/@@images/44b54d11-be40-4df7-870f-2cdb5ff19982.png"
-          width="100"
+          width="100" 
         />
 
         <span style="transform: translate(-25%)"
@@ -1316,7 +1316,13 @@ público, sem vínculo de emprego/estatutário
         </div>
       </div>
 
-      <table>
+      <table 
+      style="
+          width: 100%;
+          border-collapse: collapse;
+          text-align: left;
+          background-color: #e4e6d8;
+        ">
         <tr>
           <th style="text-align: center">Comp. Apuração</th>
           <th style="text-align: center">Qtd. Trabalhadores</th>
@@ -1345,7 +1351,7 @@ público, sem vínculo de emprego/estatutário
           <td style="text-align: right">921,28</td>
         </tr>
 
-        <tr style="padding: 0; font-weight: bold; border-top: 0.2rem solid black; border-bottom: 0.2rem solid black; background-color: white;">
+        <tr style="padding: 0; font-weight: bold; border-top: 0.1rem solid black; border-bottom: 0.11rem solid black; background-color: white;">
           <td style="text-align: center">Total do  Tomador</td>
           <td style="text-align: center">Sem Tomador</td>
           <td style="text-align: center">10.079,67</td>
@@ -1367,7 +1373,13 @@ público, sem vínculo de emprego/estatutário
         </div>
       </div>
 
-      <table>
+      <table
+      style="
+          width: 100%;
+          border-collapse: collapse;
+          text-align: left;
+          background-color: #e4e6d8;
+        ">
         <tr>
           <th style="text-align: center">Comp. Apuração</th>
           <th style="text-align: center">Qtd. Trabalhadores</th>
@@ -1396,7 +1408,7 @@ público, sem vínculo de emprego/estatutário
           <td style="text-align: right">921,28</td>
         </tr>
 
-        <tr style="padding: 0; font-weight: bold; border-top: 0.2rem solid black; border-bottom: 0.2rem solid black; background-color: white;">
+        <tr style="padding: 0; font-weight: bold; border-top: 0.1rem solid black; border-bottom: 0.1rem solid black; background-color: white;">
           <td style="text-align: center">Total do  Tomador</td>
           <td style="text-align: center">Sem Tomador</td>
           <td style="text-align: center">10.079,67</td>
@@ -1418,7 +1430,12 @@ público, sem vínculo de emprego/estatutário
         </div>
       </div>
 
-      <table>
+      <table style="
+      width: 100%;
+      border-collapse: collapse;
+      text-align: left;
+      background-color: #e4e6d8;
+    ">
         <tr>
           <th style="text-align: center">Comp. Apuração</th>
           <th style="text-align: center">Qtd. Trabalhadores</th>
@@ -1446,7 +1463,7 @@ público, sem vínculo de emprego/estatutário
           <td style="text-align: right">8,25</td>
           <td style="text-align: right">921,28</td>
         </tr>
-        <tr style="padding: 0; font-weight: bold; border-top: 0.2rem solid black; border-bottom: 0.2rem solid black; background-color: white;">
+        <tr style="padding: 0; font-weight: bold; border-top: 0.1rem solid black; border-bottom: 0.1rem solid black; background-color: white;">
           <td style="text-align: center">Total do  Tomador</td>
           <td style="text-align: center">Sem Tomador</td>
           <td style="text-align: center">10.079,67</td>
@@ -1489,7 +1506,7 @@ público, sem vínculo de emprego/estatutário
       </p>
       </div>
       </div> 
-      <span style=""></span>
+      <span></span>
       </footer>
       <div class="quebraPag"></div>
   </div>
