--- a/template_pagina_padrao.html
+++ b/template_pagina_padrao.html
@@ -1298,7 +1298,7 @@ público, sem vínculo de emprego/estatutário
         <img
           class="logo"
           src="https://www.serpro.gov.br/menu/noticias/noticias-2022/fgts-digital/fgts-digital.png/@@images/44b54d11-be40-4df7-870f-2cdb5ff19982.png"
-          width="100"
+          width="100" 
         />
 
         <span style="transform: translate(-25%)"
@@ -1388,26 +1388,25 @@ público, sem vínculo de emprego/estatutário
     <main>
       <div class="topoTabela">
         <div class="infoTabela">
-          <label for="">Estabelecimento:</label>
+          <label for="">Tomador:</label>
           <span>33.780.199/0001-77</span>
         </div>
       </div>
 
-      <table
-        style="
+      <table 
+      style="
           width: 100%;
           border-collapse: collapse;
           text-align: left;
           background-color: #e4e6d8;
-        "
-      >
-        <tr style="background-color: #ccccbe; height: 25px">
+        ">
+        <tr>
           <th style="text-align: center">Comp. Apuração</th>
           <th style="text-align: center">Qtd. Trabalhadores</th>
           <th style="text-align: center">Base Remuneração Total</th>
           <th style="text-align: right">FGTS Mensal na Guia</th>
           <th style="text-align: right">FGTS Rescisório na<br />Guia</th>
-          <th style="text-align: right">Ind. Compensatória na Gui</th>
+          <th style="text-align: right">Ind. Compensatória na Guia</th>
           <th style="text-align: right">Juros</th>
           <th style="text-align: center; max-width: 50px; width: 50">
             Atualiz. Monetária
@@ -1428,13 +1427,43 @@ público, sem vínculo de emprego/estatutário
           <td style="text-align: right">8,25</td>
           <td style="text-align: right">921,28</td>
         </tr>
-        <tr style="background-color: #ccccbe; height: 25px">
+
+        <tr style="padding: 0; font-weight: bold; border-top: 0.1rem solid black; border-bottom: 0.11rem solid black; background-color: white;">
+          <td style="text-align: center">Total do  Tomador</td>
+          <td style="text-align: center">Sem Tomador</td>
+          <td style="text-align: center">10.079,67</td>
+          <td style="text-align: right">214.867,19</td>
+          <td style="text-align: right">214.867,19</td>
+          <td style="text-align: right">0,00</td>
+          <td style="text-align: right">0,00</td>
+          <td style="text-align: center">85,10</td>
+          <td style="text-align: right">8,25</td>
+          <td style="text-align: right">921,28</td>
+        </tr>
+      </table>
+    </main>
+    <main>
+      <div class="topoTabela">
+        <div class="infoTabela">
+          <label for="">Tomador:</label>
+          <span>33.780.199/0001-77</span>
+        </div>
+      </div>
+
+      <table
+      style="
+          width: 100%;
+          border-collapse: collapse;
+          text-align: left;
+          background-color: #e4e6d8;
+        ">
+        <tr>
           <th style="text-align: center">Comp. Apuração</th>
           <th style="text-align: center">Qtd. Trabalhadores</th>
           <th style="text-align: center">Base Remuneração Total</th>
           <th style="text-align: right">FGTS Mensal na Guia</th>
           <th style="text-align: right">FGTS Rescisório na<br />Guia</th>
-          <th style="text-align: right">Ind. Compensatória na Gui</th>
+          <th style="text-align: right">Ind. Compensatória na Guia</th>
           <th style="text-align: right">Juros</th>
           <th style="text-align: center; max-width: 50px; width: 50">
             Atualiz. Monetária
@@ -1447,6 +1476,86 @@ público, sem vínculo de emprego/estatutário
           <td style="text-align: center">09/2023</td>
           <td style="text-align: center">2 - FGTS 13° salário rescisório</td>
           <td style="text-align: center">114</td>
+          <td style="text-align: right">214.867,19</td>
+          <td style="text-align: right">214.867,19</td>
+          <td style="text-align: right">0,00</td>
+          <td style="text-align: right">0,00</td>
+          <td style="text-align: center">85,10</td>
+          <td style="text-align: right">8,25</td>
+          <td style="text-align: right">921,28</td>
+        </tr>
+
+        <tr style="padding: 0; font-weight: bold; border-top: 0.1rem solid black; border-bottom: 0.1rem solid black; background-color: white;">
+          <td style="text-align: center">Total do  Tomador</td>
+          <td style="text-align: center">Sem Tomador</td>
+          <td style="text-align: center">10.079,67</td>
+          <td style="text-align: right">214.867,19</td>
+          <td style="text-align: right">214.867,19</td>
+          <td style="text-align: right">0,00</td>
+          <td style="text-align: right">0,00</td>
+          <td style="text-align: center">85,10</td>
+          <td style="text-align: right">8,25</td>
+          <td style="text-align: right">921,28</td>
+        </tr>
+      </table>
+    </main>
+    <main>
+      <div class="topoTabela">
+        <div class="infoTabela">
+          <label for="">Tomador:</label>
+          <span>33.780.199/0001-77</span>
+        </div>
+      </div>
+
+      <table style="
+      width: 100%;
+      border-collapse: collapse;
+      text-align: left;
+      background-color: #e4e6d8;
+    ">
+        <tr>
+          <th style="text-align: center">Comp. Apuração</th>
+          <th style="text-align: center">Qtd. Trabalhadores</th>
+          <th style="text-align: center">Base Remuneração Total</th>
+          <th style="text-align: right">FGTS Mensal na Guia</th>
+          <th style="text-align: right">FGTS Rescisório na<br />Guia</th>
+          <th style="text-align: right">Ind. Compensatória na Guia</th>
+          <th style="text-align: right">Juros</th>
+          <th style="text-align: center; max-width: 50px; width: 50">
+            Atualiz. Monetária
+          </th>
+          <th style="text-align: right; max-width: 50px">Multa</th>
+          <th style="text-align: right; max-width: 50px">Total</th>
+        </tr>
+
+        <tr style="padding: 0">
+          <td style="text-align: center">09/2023</td>
+          <td style="text-align: center">2 - FGTS 13° salário rescisório</td>
+          <td style="text-align: center">114</td>
+          <td style="text-align: right">214.867,19</td>
+          <td style="text-align: right">214.867,19</td>
+          <td style="text-align: right">0,00</td>
+          <td style="text-align: right">0,00</td>
+          <td style="text-align: center">85,10</td>
+          <td style="text-align: right">8,25</td>
+          <td style="text-align: right">921,28</td>
+        </tr>
+        <tr style="padding: 0; font-weight: bold; border-top: 0.1rem solid black; border-bottom: 0.1rem solid black; background-color: white;">
+          <td style="text-align: center">Total do  Tomador</td>
+          <td style="text-align: center">Sem Tomador</td>
+          <td style="text-align: center">10.079,67</td>
+          <td style="text-align: right">214.867,19</td>
+          <td style="text-align: right">214.867,19</td>
+          <td style="text-align: right">0,00</td>
+          <td style="text-align: right">0,00</td>
+          <td style="text-align: center">85,10</td>
+          <td style="text-align: right">8,25</td>
+          <td style="text-align: right">921,28</td>
+        </tr>
+        <tr style="padding: 0; font-weight: bold;background-color: white; font-weight: bold;">
+          <td style="text-align: center"></td>
+          <td style="text-align: center">Total da Guia</td>
+          <td style="text-align: center">10.079,67</td>
           <td style="text-align: right">214.867,19</td>
           <td style="text-align: right">214.867,19</td>
           <td style="text-align: right">0,00</td>
@@ -1458,7 +1567,24 @@ público, sem vínculo de emprego/estatutário
       </table>
     </main>
 
-    <footer></footer>
-    <div class="quebraPag"></div>
+    <footer>
+      <hr>
+      <div>
+      </div>
+      <div style="display:flex; font-size:8px; justify-content:space-between; padding:2px 2px;">
+      <p>Todos os valores exibidos estão expressos em reais (R$)</p>
+      <div style="display:flex; justify-content:space-around;">
+      
+      <p>
+      Relatório Emitido em: 23/10/2023 10:03:51 (Brasília).</p>
+      
+      <p style="margin-left: 50px;" >
+      Página 1 de 9
+      </p>
+      </div>
+      </div> 
+      <span></span>
+      </footer>
+      <div class="quebraPag"></div>
   </div>
 </html>
