att new pag/ footer

--- a/template_pagina_padrao.html
+++ b/template_pagina_padrao.html
@@ -19,7 +19,7 @@
     }
     .tamanhoPage {
       width: 297mm;
-      height: 200mm;
+      height: 205mm;
       position: relative;
     }
     body {
@@ -1540,7 +1540,7 @@ público, sem vínculo de emprego/estatutário
     </footer>
     <div class="quebraPag"></div>
   </div>
-  <div>
+  <div class="tamanhoPage">
     <header>
       <div class="titulo">
         <img
@@ -1741,6 +1741,25 @@ público, sem vínculo de emprego/estatutário
       </div>
       
     </main>
+    <footer>
+      <hr />
+      <div></div>
+      <div
+        style="
+          display: flex;
+          font-size: 8px;
+          justify-content: space-between;
+          padding: 2px 2px;
+        "
+      >
+        <p>Todos os valores exibidos estão expressos em reais (R$)</p>
+        <div style="display: flex; justify-content: space-around">
+          <p>Relatório Emitido em: 23/10/2023 10:03:51 (Brasília).</p>
 
+          <p style="margin-left: 50px">Página 1 de 9</p>
+        </div>
+      </div>
+      <span></span>
+    </footer>
   </div>
 </html>
