--- a/template_pagina_padrao.html
+++ b/template_pagina_padrao.html
@@ -57,8 +57,7 @@
       gap: 5px;
       font-size: 0.75rem;
     }
-    footer {
-    }
+
     .col-2 {
       display: flex;
       flex-direction: column;
@@ -126,8 +125,9 @@
       align-items: end;
       margin-top: auto;
       position: absolute;
+      padding-top:-25px;
       width: 100%;
-      bottom: 0;
+      bottom: 15px;
       justify-content: space-between;
     }
     .quebraPag {
@@ -383,7 +383,7 @@ Referência
 </th>
 <th style="max-width: 600px">Nome Trabalhador</th>
 <th style="width: 125px">Matrícula</th>
-<th style="max-width: 150px">CPF</th>
+<th style="max-width: 130px">CPF</th>
 <th style="text-align: right; padding-right: 20px">Categoria</th>
 <th>Vencimento</th>
 <th>Tipo Depósito</th>
@@ -872,7 +872,6 @@ Relatório Emitido em: ${data_atual} (Brasília).</p>
 </div> 
 <span style=""></span>
 </footer>
-<div class="quebraPag"></div>
 `;
 
                   const pagina2 = document.createElement("div");
